start fixing EF

--- a/SoftMasters/Views/SM/SMPage.cshtml
+++ b/SoftMasters/Views/SM/SMPage.cshtml
@@ -3,6 +3,9 @@
     Layout = "_Layout";
 }
 <body>
+<div>
+    <p><i class="bi bi-tools" style="font-size: 25px"></i> This project is under development. Source code you may find <a href="https://github.com/Dmise/SoftMasters">here</a> on my github repo.</p>
+</div>
 <table class="table">
     <tr>        
         <td>
