--- a/SoftMasters/Views/Shared/_Layout.cshtml
+++ b/SoftMasters/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -25,7 +26,7 @@
                         
                         <li class="nav-item">    
                             <div class="btn-group">
-                            <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link text-dark">Test Tasks</a>                            
+                            <a class="navbar-brand" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link text-dark">Test Tasks</a>                            
                             <div class="dropdown-menu">
                                     <a class="nav-link text-dark" asp-controller="SM" asp-action="SMPage">Soft Masters</a>                             
                             </div>
