--- a/SoftMasters/Views/Shared/_Layout.cshtml
+++ b/SoftMasters/Views/Shared/_Layout.cshtml
@@ -8,27 +8,38 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <style>
+        .hoh:hover{
+            background-color: darkturquoise;
+            border-radius: 5px;
+        }
+        
+
+    </style>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-light border-bottom mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home page</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <a class="navbar-brand hoh" asp-area="" asp-controller="Home" asp-action="Index">Home page</a>
+                @*<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>*@
+                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        
+                <div style="cursor:pointer" class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">                        
                         <li class="nav-item">    
                             <div class="btn-group">
-                            <a class="navbar-brand" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link text-dark">Test Tasks</a>                            
+                            <a class="navbar-brand hoh" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link text-dark">Test Tasks</a>                            
                             <div class="dropdown-menu">
-                                    <a class="nav-link text-dark" asp-controller="SM" asp-action="SMPage">Soft Masters</a>                             
+                                    <a class="nav-link text-dark hoh" asp-controller="SM" asp-action="SMPage">Soft Masters</a>                             
                             </div>
                             </div>
                         </li>
